--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
     <!-- ヘッダー -->
     <header>
-        <h1>サンプルホームページ</h1>
-        <p>これはHTMLとCSSで作成した簡単なウェブページの例です。</p>
+        <h1>ぴくぴく隊のホームページ</h1>
+        <p>これはぴくぴく隊のホームページです</p>
     </header>
 
     <!-- ナビゲーション -->
     <nav>
-        <a href="#home">ホーム</a>
+        <a href="https://youtube.com/@piku_piku_tai?si=8p1g9s-ZM5z6Z94Q">YouTube</a>
         <a href="#about">私たちについて</a>
         <a href="#services">サービス</a>
         <a href="#contact">お問い合わせ</a>
