--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
     <!-- ヘッダー -->
     <header>
-        <h1>ぴくぴく隊のホームページ</h1>
-        <p>これはぴくぴく隊のホームページです</p>
+        <h1>MMT早稲田祭出演アーティスト</h1>
+        <p>MMTの早稲田祭に出演するアーティストをまとめました！</p>
     </header>
 
     <!-- ナビゲーション -->
