--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- ナビゲーション -->
     <nav>
-        <a href="https://youtube.com/@piku_piku_tai?si=8p1g9s-ZM5z6Z94Q">YouTube</a>
+        <a href="https://www.instagram.com/modern_music_troop?igsh=MTA4Zngxc2Z3enEyMg%3D%3D&utm_source=qr">MMT<\n>いんすた</a>
         <a href="#about">私たちについて</a>
         <a href="#services">サービス</a>
         <a href="#contact">お問い合わせ</a>
