--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- ナビゲーション -->
     <nav>
         <a href="https://www.instagram.com/modern_music_troop?igsh=MTA4Zngxc2Z3enEyMg%3D%3D&utm_source=qr">MMT<\n>いんすた</a>
-        <a href="#about">私たちについて</a>
+        <a href="https://x.com/modern_music_t?s=21">MMT<\n>えっくす</a>
         <a href="#services">サービス</a>
         <a href="#contact">お問い合わせ</a>
     </nav>
