--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
     <!-- ナビゲーション -->
     <nav>
-        <a href="https://www.instagram.com/modern_music_troop?igsh=MTA4Zngxc2Z3enEyMg%3D%3D&utm_source=qr">MMT<\n>いんすた</a>
-        <a href="https://x.com/modern_music_t?s=21">MMT<\n>えっくす</a>
+        <a href="https://www.instagram.com/modern_music_troop?igsh=MTA4Zngxc2Z3enEyMg%3D%3D&utm_source=qr">MMT<bn>いんすた</a>
+        <a href="https://x.com/modern_music_t?s=21">MMT<bn>えっくす</a>
         <a href="#services">サービス</a>
         <a href="#contact">お問い合わせ</a>
     </nav>
