--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
         nav a {
             color: white;
-            padding: 14px 20px;
+            padding: 14px 40px;
             text-decoration: none;
             text-align: center;
         }
@@ -56,8 +56,8 @@
 
     <!-- ナビゲーション -->
     <nav>
-        <a href="https://www.instagram.com/modern_music_troop?igsh=MTA4Zngxc2Z3enEyMg%3D%3D&utm_source=qr">MMT<br>Instagram</a>
-        <a href="https://x.com/modern_music_t?s=21">MMT<br>Twitter</a>
+        <a href="https://www.instagram.com/modern_music_troop?igsh=MTA4Zngxc2Z3enEyMg%3D%3D&utm_source=qr">MMTのInstagram<br>はこちらをタップ！</a>
+        <a href="https://x.com/modern_music_t?s=21">MMTのTwitter<br>はこちらをタップ！</a>
     </nav>
 
     <!-- メインコンテンツ -->
