--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
     <!-- ナビゲーション -->
     <nav>
-        <a href="https://www.instagram.com/modern_music_troop?igsh=MTA4Zngxc2Z3enEyMg%3D%3D&utm_source=qr">Instagram<br>はこちらをタップ！</a>
-        <a href="https://x.com/modern_music_t?s=21">Twitter<br>はこちらをタップ！</a>
+        <a href="https://www.instagram.com/modern_music_troop?igsh=MTA4Zngxc2Z3enEyMg%3D%3D&utm_source=qr">Instagram<br>はこちらから！</a>
+        <a href="https://x.com/modern_music_t?s=21">Twitter<br>はこちらから！</a>
     </nav>
 
     <!-- メインコンテンツ -->
