--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- メインコンテンツ -->
     <section id="home">
-        <h2>ホーム</h2>
+        <h2>MMTの早稲田祭ライブに出演するアーティスト一覧</h2>
         <p>ここにメインのコンテンツが入ります。</p>
     </section>
 
