--- a/index.html
+++ b/index.html
@@ -67,9 +67,14 @@
     </section>
 
     <section id="about">
-        <h2>私たちについて</h2>
-        <p>私たちは、シンプルかつ美しいデザインを目指してホームページを作成しています。</p>
-        <img src="https://via.placeholder.com/400" alt="サンプル画像">
+        <h2>教室企画出演バンド</h2>
+        <div>
+            <h3>ぴくぴく隊</h3>
+            <p>10:20〜10:30</p>
+            <img src=""></img>
+             <p>バンドURL</p>
+            <a href="https://www.instagram.com/piku_piku_tai">ぴくぴく隊のInstagram</a>
+        </div>
     </section>
 
     <section id="services">
