--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div>
             <h3>ぴくぴく隊</h3>
             <p>10:20〜10:30</p>
-            <img src=""></img>
+            <img src="IMG_7301.jpeg"></img>
             <p>バンドURL</p>
             <a href="https://www.instagram.com/piku_piku_tai">ぴくぴく隊のInstagram</a>
         </div>
