--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             width: 100%;
             bottom: 0;
         }
+        band_icon {
+            width: 200px;
+        }
     </style>
 </head>
 <body>
@@ -71,7 +74,7 @@
         <div>
             <h3>ぴくぴく隊</h3>
             <p>10:20〜10:30</p>
-            <img src="IMG_7301.jpeg"></img>
+            <img class="band_icon" src="IMG_7301.jpeg"></img>
             <p>バンドURL</p>
             <a href="https://www.instagram.com/piku_piku_tai">ぴくぴく隊のInstagram</a>
         </div>
