--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             width: 100%;
             bottom: 0;
         }
-        band_icon {
+        .band_icon {
             width: 200px;
         }
     </style>
