--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <!-- ヘッダー -->
     <header>
-        <h1>MMT早稲田祭出演アーティスト</h1>
-        <p>MMTの早稲田祭に出演するアーティストをまとめました！</p>
+        <h1>MMTのバンドの曲まとめました！</h1>
+        <p>早稲田祭に出演するバンド(ソロ)から曲を集めて、GoogleDriveにまとめました！ぜひ聴いていってください！</p>
     </header>
 
     <!-- ナビゲーション -->
