--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
 
     <section id="about">
-        <h2>教室企画出演バンド</h2>
+        <h2>外企画バンド</h2>
         <div>
             <h3>ぴくぴく隊</h3>
             <p>10:20〜10:30</p>
