--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
     </section>
 
     <section id="about">
-        <h2>外企画バンド</h2>
+        <h2>教室企画</h2>
+        <h2>外企画</h2>
         <div>
-            <h3>ぴくぴく隊</h3>
-            <p>10:20〜10:30</p>
+            <h3>●ぴくぴく隊</h3>
+            <p>13:10〜13:25</p>
             <img class="band_icon" src="IMG_7301.jpeg"></img>
             <p>バンドURL</p>
             <a href="https://www.instagram.com/piku_piku_tai">ぴくぴく隊のInstagram</a>
