--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
     <!-- メインコンテンツ -->
     <section id="home">
-        <h2>MMTの早稲田祭ライブに出演するアーティスト一覧</h2>
-        <p>ここにメインのコンテンツが入ります。</p>
+        <h2>MMTのバンドの曲まとめました！</h2>
+        <p>早稲田祭に出演するバンド(ソロ)から曲を集めて、GoogleDriveにまとめました！ぜひ聴いていってください！</p>
     </section>
 
     <section id="about">
