--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     </section>
 
     <section id="about">
-        <h2>教室企画</h2>
-        <h2>外企画</h2>
+        <h2>【教室企画】</h2>
+        <h2>【外企画】</h2>
         <div>
             <h3>●ぴくぴく隊</h3>
             <p>13:10〜13:25</p>
