--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <!-- ヘッダー -->
     <header>
-        <h1>MMTのバンドの曲まとめました！</h1>
-        <p>早稲田祭に出演するバンド(ソロ)から曲を集めて、GoogleDriveにまとめました！ぜひ聴いていってください！</p>
+        <h1>MMT早稲田祭ライブ特設サイト</h1>
+        <p>各バンドの情報をまとめました！</p>
     </header>
 
     <!-- ナビゲーション -->
