--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
             <p>バンドURL</p>
             <a href="https://www.instagram.com/piku_piku_tai">ぴくぴく隊のInstagram</a>
         </div>
+        <div>
+            <h3>●ノコノコブンブン</h3>
+            <p>13:35〜13:50</p>
+            <img class="band_icon" src=""></img>
+            <p>バンドURL</p>
+            <a href="https://linktr.ee/nokonokobunbun">のこのこブンブンのホームページ</a>
+        </div>
     </section>
 
 </body>
