--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div>
             <h3>●ノコノコブンブン</h3>
             <p>13:35〜13:50</p>
-            <img class="band_icon" src=""></img>
+            <img class="band_icon" src="IMG_7536.jpeg"></img>
             <p>バンドURL</p>
             <a href="https://linktr.ee/nokonokobunbun">のこのこブンブンのホームページ</a>
         </div>
