--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h3>●Syllollysmi</h3>
             <h4>15:10〜15:25</h4>
             <img class="band_icon" src="IMG_7301.jpeg"></img>
-            //<p>バンドURL</p>//
+            /＊<p>バンドURL</p>＊/
         </div>
         <div>
             <h3>●夏を越えて</h3>
