--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
 
     <section id="about">
         <h2>○教室企画</h2>
+        <div>
+            <h3>●ノコノコブンブン</h3>
+            <h4>10:10〜10:30</h4>
+            <img class="band_icon" src="IMG_7536.jpeg"></img>
+            <p>バンドURL</p>
+            <a href="https://linktr.ee/nokonokobunbun">のこのこブンブンのホームページ</a>
+        </div>
         <h2>○外企画</h2>
         <div>
             <h3>●ぴくぴく隊</h3>
