--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
             <p>バンドURL</p>
             <a href="https://linktr.ee/nokonokobunbun">のこのこブンブンのホームページ</a>
         </div>
+        <div>
+            <h3>●KidNess</h3>
+            <h4>10:40〜11:00</h4>
+            <img class="band_icon" src="IMG_7545.jpeg"></img>
+            <p>バンドURL</p>
+            <a href="https://www.instagram.com/kidness____jp?igsh=bDQ5ZnB3eGhsM25x">のこのこブンブンのホームページ</a>
+        </div>
         <h2>○外企画</h2>
         <div>
             <h3>●ぴくぴく隊</h3>
