--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             <p>バンドURL</p>
             <a href="https://www.instagram.com/kidness____jp?igsh=bDQ5ZnB3eGhsM25x">のこのこブンブンのホームページ</a>
         </div>
+        <div>
+            <h3>●カワムラミト</h3>
+            <h4>11:40〜12:00</h4>
+            <img class="band_icon" src="IMG_7545.jpeg"></img>
+        </div>
         <h2>○外企画</h2>
         <div>
             <h3>●ぴくぴく隊</h3>
