--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h4>10:40〜11:00</h4>
             <img class="band_icon" src="IMG_7545.jpeg"></img>
             <p>バンドURL</p>
-            <a href="https://www.instagram.com/kidness____jp?igsh=bDQ5ZnB3eGhsM25x">のこのこブンブンのホームページ</a>
+            <a href="https://www.instagram.com/kidness____jp?igsh=bDQ5ZnB3eGhsM25x">KidNessのInstagram</a>
         </div>
         <div>
             <h3>●カワムラミト</h3>
