--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MMT早稲田祭特設ページ</title>
+    <title>MMT早稲田祭(11/3)特設ページ</title>
     <style>
         /* スタイル設定 */
         body {
@@ -71,7 +71,7 @@
     </section>
 
     <section id="about">
-        <h2>○教室企画</h2>
+        <h2>○教室企画@7号館206</h2>
         <div>
             <h3>●ノコノコブンブン</h3>
             <h4>10:10〜10:30</h4>
@@ -111,7 +111,7 @@
             <h4>16:30〜16:50</h4>
             <img class="band_icon" src="IMG_7544.jpeg"></img>
         </div>
-        <h2>○外企画</h2>
+        <h2>○外企画@2号館横</h2>
         <div>
             <h3>●ぴくぴく隊</h3>
             <h4>13:10〜13:25</h4>
