--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MMT早稲田祭(11/3)特設ページ</title>
+    <title>MMT早稲田祭(11/3)<br>特設ページ</title>
     <style>
         /* スタイル設定 */
         body {
