--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
     </nav>
 
     <!-- メインコンテンツ -->
+    <img class="band_icon" src="IMG_7550.jpeg"></img>
+    
     <section id="home">
         <h2>MMTのバンドの曲まとめました！</h2>
         <p>早稲田祭に出演するバンド(ソロ)から曲を集めて、GoogleDriveにまとめました！ぜひ聴いていってください！</p>
