--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 
     <!-- メインコンテンツ -->
-    <img class="band_icon" src="IMG_7550.jpeg"></img>
+    <img class="flyer" src="IMG_7550.jpeg"></img>
     
     <section id="home">
         <h2>MMTのバンドの曲まとめました！</h2>
