--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         .band_icon {
             width: 200px;
         }
+        .flyer{
+            width: 100%;
+        }
     </style>
 </head>
 <body>
