--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     </section>
 
     <section id="about">
+        <h2>↓↓各バンド情報↓↓</h2>
         <h2>○教室企画@7号館206</h2>
         <div>
             <h3>●ノコノコブンブン</h3>
