--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
             <h3>●カワムラミト</h3>
             <h4>11:40〜12:00</h4>
             <img class="band_icon" src="IMG_7543.jpeg"></img>
+            <p></p>
+            <a href="https://x.com/kawamuramito?s=21">カワムラミトのtwitter</a>
         </div>
         <div>
             <h3>●越冬</h3>
