--- a/index.html
+++ b/index.html
@@ -97,12 +97,14 @@
             <h4>11:40〜12:00</h4>
             <img class="band_icon" src="IMG_7543.jpeg"></img>
             <p></p>
-            <a href="https://x.com/kawamuramito?s=21">カワムラミトのtwitter</a>
+            <a href="https://x.com/kawamuramito?s=21">カワムラミトのX</a>
         </div>
         <div>
             <h3>●越冬</h3>
             <h4>12:10〜12:30</h4>
             <img class="band_icon" src="IMG_7546.jpeg"></img>
+            <p></p>
+            <a href="https://x.com/daikanyamakei?s=21">越冬のX</a>
         </div>
         <div>
             <h3>●pseudonym</h3>
