--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h4>11:40〜12:00</h4>
             <img class="band_icon" src="IMG_7543.jpeg"></img>
             <p></p>
-            <a href="https://x.com/kawamuramito?s=21">カワムラミトのX</a>
+            <a href="https://lit.link/kawamuramito">カワムラミトのホームページ</a>
         </div>
         <div>
             <h3>●越冬</h3>
