--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <a href="https://www.instagram.com/natsu_wo_koete?igsh=dDdocjh5YWRzNDU=">夏を越えてのInstagram</a>
         </div>
     </section>
-    <p></p>
+    <p>ModernMusicTroop(MMT)</p>
 
 </body>
 </html>
