--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <h4>12:10〜12:30</h4>
             <img class="band_icon" src="IMG_7546.jpeg"></img>
             <p></p>
-            <a href="https://x.com/daikanyamakei?s=21">越冬のX</a>
+            <a href="https://linktr.ee/daikanyamakei">越冬のホームページ</a>
         </div>
         <div>
             <h3>●pseudonym</h3>
