--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <h4>13:10〜13:25</h4>
             <img class="band_icon" src="IMG_7301.jpeg"></img>
             <p></p>
-            <a href="https://www.instagram.com/piku_piku_tai">ぴくぴく隊のInstagram</a>
+            <a href="https://linktr.ee/pikupikutai">ぴくぴく隊のホームページ</a>
         </div>
         <div>
             <h3>●ノコノコブンブン</h3>
