--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
             <h3>●Mrs.MUSCAT</h3>
             <h4>16:30〜16:50</h4>
             <img class="band_icon" src="IMG_7544.jpeg"></img>
+            <p></p>
+            <a href="https://youtube.com/@catty_dog?si=M9enHs1g5cZtKQTn">Mrs.MUSCATの代表者 奏夢/CattyDog YouTubeチャンネル</a>
         </div>
         <h2>○外企画@2号館横</h2>
         <div>
